# MP

./: CMakeLists.txt  Documentación_Módulo_MP.docx  Evolucion  README.md  cronista.c  cronista.h  estructuras.h  main.c
cronista/: cronista.c  cronista.h  estructuras_cronista.h
cronista/equipos/: equipos.c  equipos.h
cronista/futbolistas/: futbolistas.c  futbolistas.h
cronista/tests/: tests_equipos.c
equipos/: equipos.c  equipos.h
futbolistas/: futbolistas.c  futbolistas.h
tests/: tests_equipos.c  tests_equipos.h  tests_futbolistas.c  tests_futbolistas.h
